Implemented tab player data

--- a/src/main/resources/it/italiandudes/hellrandomizer/resources/fxml/SceneMain.fxml
+++ b/src/main/resources/it/italiandudes/hellrandomizer/resources/fxml/SceneMain.fxml
@@ -18,7 +18,7 @@
             <TabPane tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <tabs>
                   <Tab fx:id="tabRandomizer" text="Randomizer" />
-                  <Tab fx:id="tabPlayersData" text="Dati Giocatori" />
+                  <Tab fx:id="tabPlayersData" text="Dati Helldivers" />
                   <Tab fx:id="tabSettings" text="Impostazioni" />
                </tabs>
             </TabPane>
