--- a/src/main/resources/it/italiandudes/hellrandomizer/resources/css/theme.css
+++ b/src/main/resources/it/italiandudes/hellrandomizer/resources/css/theme.css
@@ -31,3 +31,7 @@ color-illuminates: #861BFF;
     -fx-font-weight: bold;
     -fx-font-size: 32px;
 }
+
+.randomizer-label-bold {
+    -fx-font-weight: bold;
+}
