--- a/src/main/resources/it/italiandudes/hellrandomizer/resources/fxml/tabs/SceneTabRandomizer.fxml
+++ b/src/main/resources/it/italiandudes/hellrandomizer/resources/fxml/tabs/SceneTabRandomizer.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--suppress JavaFxDefaultTag -->
-
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -18,70 +18,179 @@
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
           <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <ScrollPane fitToHeight="true" fitToWidth="true">
                <content>
-                  <GridPane disable="true" vgap="10.0">
-                     <columnConstraints>
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
-                     </rowConstraints>
+                  <AnchorPane>
+                     <children>
+                        <GridPane hgap="5.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="LEFT" hgrow="NEVER" />
+                              <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                            <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                            <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="TOP" vgrow="ALWAYS" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="NEVER" />
+                          </rowConstraints>
+                           <children>
+                              <Label styleClass="randomizer-label-bold" text="Helldiver:" />
+                              <Label fx:id="labelArmorOne" styleClass="randomizer-label-bold" text="Armatura" GridPane.rowIndex="1" />
+                              <Label fx:id="labelPrimaryWeaponOne" styleClass="randomizer-label-bold" text="Primaria" GridPane.rowIndex="2" />
+                              <Label fx:id="labelSecondaryWeaponOne" styleClass="randomizer-label-bold" text="Secondaria" GridPane.rowIndex="3" />
+                              <Label fx:id="labelThrowableWeaponOne" styleClass="randomizer-label-bold" text="Lanciabile" GridPane.rowIndex="4" />
+                              <Label styleClass="randomizer-label-bold" text="Stratagemmi" GridPane.rowIndex="5" />
+                              <Label styleClass="randomizer-label-bold" text="Potenziamento" GridPane.rowIndex="6" />
+                              <Label fx:id="labelHelldiverNameOne" GridPane.columnIndex="1" />
+                              <Label fx:id="labelHelldiverArmorOne" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label fx:id="labelHelldiverPrimaryWeaponOne" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label fx:id="labelHelldiverSecondaryWeaponOne" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label fx:id="labelHelldiverThrowableWeaponOne" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <ListView fx:id="listViewHelldiverStratagemsOne" minHeight="-Infinity" prefHeight="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label fx:id="labelHelldiverBoosterOne" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                           </children>
+                        </GridPane>
+                     </children>
                      <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
-                  </GridPane>
+                  </AnchorPane>
                </content>
             </ScrollPane>
             <ScrollPane fitToHeight="true" fitToWidth="true" GridPane.columnIndex="1">
                <content>
-                  <GridPane disable="true" vgap="10.0">
-                     <columnConstraints>
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
-                     </rowConstraints>
+                  <AnchorPane>
+                     <children>
+                        <GridPane hgap="5.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="LEFT" hgrow="NEVER" />
+                              <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                            <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                            <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="TOP" vgrow="ALWAYS" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="NEVER" />
+                          </rowConstraints>
+                           <children>
+                              <Label styleClass="randomizer-label-bold" text="Helldiver:" />
+                              <Label fx:id="labelArmorTwo" styleClass="randomizer-label-bold" text="Armatura" GridPane.rowIndex="1" />
+                              <Label fx:id="labelPrimaryWeaponTwo" styleClass="randomizer-label-bold" text="Primaria" GridPane.rowIndex="2" />
+                              <Label fx:id="labelSecondaryWeaponTwo" styleClass="randomizer-label-bold" text="Secondaria" GridPane.rowIndex="3" />
+                              <Label fx:id="labelThrowableWeaponTwo" styleClass="randomizer-label-bold" text="Lanciabile" GridPane.rowIndex="4" />
+                              <Label styleClass="randomizer-label-bold" text="Stratagemmi" GridPane.rowIndex="5" />
+                              <Label styleClass="randomizer-label-bold" text="Potenziamento" GridPane.rowIndex="6" />
+                              <Label fx:id="labelHelldiverNameTwo" GridPane.columnIndex="1" />
+                              <Label fx:id="labelHelldiverArmorTwo" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label fx:id="labelHelldiverPrimaryWeaponTwo" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label fx:id="labelHelldiverSecondaryWeaponTwo" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label fx:id="labelHelldiverThrowableWeaponTwo" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <ListView fx:id="listViewHelldiverStratagemsTwo" minHeight="-Infinity" prefHeight="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label fx:id="labelHelldiverBoosterTwo" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                           </children>
+                        </GridPane>
+                     </children>
                      <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
-                  </GridPane>
+                  </AnchorPane>
                </content>
             </ScrollPane>
-            <ScrollPane fitToHeight="true" fitToWidth="true" GridPane.rowIndex="1">
+            <ScrollPane fitToHeight="true" fitToWidth="true" GridPane.columnIndex="2">
                <content>
-                  <GridPane disable="true" vgap="10.0">
-                     <columnConstraints>
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
-                     </rowConstraints>
+                  <AnchorPane>
+                     <children>
+                        <GridPane hgap="5.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="LEFT" hgrow="NEVER" />
+                              <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                            <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                            <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="TOP" vgrow="ALWAYS" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="NEVER" />
+                          </rowConstraints>
+                           <children>
+                              <Label styleClass="randomizer-label-bold" text="Helldiver:" />
+                              <Label fx:id="labelArmorThree" styleClass="randomizer-label-bold" text="Armatura" GridPane.rowIndex="1" />
+                              <Label fx:id="labelPrimaryWeaponThree" styleClass="randomizer-label-bold" text="Primaria" GridPane.rowIndex="2" />
+                              <Label fx:id="labelSecondaryWeaponThree" styleClass="randomizer-label-bold" text="Secondaria" GridPane.rowIndex="3" />
+                              <Label fx:id="labelThrowableWeaponThree" styleClass="randomizer-label-bold" text="Lanciabile" GridPane.rowIndex="4" />
+                              <Label styleClass="randomizer-label-bold" text="Stratagemmi" GridPane.rowIndex="5" />
+                              <Label styleClass="randomizer-label-bold" text="Potenziamento" GridPane.rowIndex="6" />
+                              <Label fx:id="labelHelldiverNameThree" GridPane.columnIndex="1" />
+                              <Label fx:id="labelHelldiverArmorThree" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label fx:id="labelHelldiverPrimaryWeaponThree" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label fx:id="labelHelldiverSecondaryWeaponThree" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label fx:id="labelHelldiverThrowableWeaponThree" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <ListView fx:id="listViewHelldiverStratagemsThree" minHeight="-Infinity" prefHeight="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label fx:id="labelHelldiverBoosterThree" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                           </children>
+                        </GridPane>
+                     </children>
                      <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
-                  </GridPane>
+                  </AnchorPane>
                </content>
             </ScrollPane>
-            <ScrollPane fitToHeight="true" fitToWidth="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <ScrollPane fitToHeight="true" fitToWidth="true" GridPane.columnIndex="3">
                <content>
-                  <GridPane disable="true" vgap="10.0">
-                     <columnConstraints>
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
-                     </rowConstraints>
+                  <AnchorPane>
+                     <children>
+                        <GridPane hgap="5.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="LEFT" hgrow="NEVER" />
+                              <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                            <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                            <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                              <RowConstraints valignment="TOP" vgrow="ALWAYS" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="NEVER" />
+                          </rowConstraints>
+                           <children>
+                              <Label styleClass="randomizer-label-bold" text="Helldiver:" />
+                              <Label fx:id="labelArmorFour" styleClass="randomizer-label-bold" text="Armatura" GridPane.rowIndex="1" />
+                              <Label fx:id="labelPrimaryWeaponFour" styleClass="randomizer-label-bold" text="Primaria" GridPane.rowIndex="2" />
+                              <Label fx:id="labelSecondaryWeaponFour" styleClass="randomizer-label-bold" text="Secondaria" GridPane.rowIndex="3" />
+                              <Label fx:id="labelThrowableWeaponFour" styleClass="randomizer-label-bold" text="Lanciabile" GridPane.rowIndex="4" />
+                              <Label styleClass="randomizer-label-bold" text="Stratagemmi" GridPane.rowIndex="5" />
+                              <Label styleClass="randomizer-label-bold" text="Potenziamento" GridPane.rowIndex="6" />
+                              <Label fx:id="labelHelldiverName1" GridPane.columnIndex="1" />
+                              <Label fx:id="labelHelldiverArmorFour" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label fx:id="labelHelldiverPrimaryWeaponFour" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label fx:id="labelHelldiverSecondaryWeaponFour" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label fx:id="labelHelldiverThrowableWeaponFour" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <ListView fx:id="listViewHelldiverStratagemsFour" minHeight="-Infinity" prefHeight="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label fx:id="labelHelldiverBoosterFour" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                           </children>
+                        </GridPane>
+                     </children>
                      <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
-                  </GridPane>
+                  </AnchorPane>
                </content>
             </ScrollPane>
          </children>
