--- a/src/main/resources/it/italiandudes/hellrandomizer/resources/fxml/tabs/SceneTabRandomizer.fxml
+++ b/src/main/resources/it/italiandudes/hellrandomizer/resources/fxml/tabs/SceneTabRandomizer.fxml
@@ -3,11 +3,17 @@
 <!--suppress JavaFxDefaultTag -->
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.italiandudes.hellrandomizer.javafx.controllers.tabs.ControllerSceneTabRandomizer">
@@ -22,15 +28,63 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <children>
-                  <ToggleButton fx:id="toggleButtonRandomizeHelldivers" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#toggleRandomizeHelldivers" text="RANDOMIZZA HELLDIVERS">
+                  <ToggleButton fx:id="toggleButtonRandomizeAll" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#toggleRandomizeAll" text="RANDOMIZZA TUTTO">
                      <graphic>
-                        <ImageView fx:id="imageViewToggle" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imageViewToggleRandomizeAll" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../image/play.png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </ToggleButton>
+                  <GridPane hgap="5.0" style="-fx-border-color: black; -fx-border-radius: 4px; -fx-border-width: 2px;" vgap="5.0">
+                    <columnConstraints>
+                        <ColumnConstraints halignment="CENTER" hgrow="NEVER" />
+                      <ColumnConstraints halignment="LEFT" hgrow="NEVER" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                      <RowConstraints valignment="CENTER" vgrow="NEVER" />
+                    </rowConstraints>
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#randomizeEnemy">
+                           <graphic>
+                              <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../image/refresh.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#randomizeDifficulty" GridPane.rowIndex="1">
+                           <graphic>
+                              <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../image/refresh.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <FlowPane alignment="CENTER_LEFT" columnHalignment="CENTER" hgap="5.0" GridPane.columnIndex="1">
+                           <children>
+                              <Label style="-fx-font-weight: bold;" text="Fazione:" />
+                              <Label fx:id="labelEnemy" text="?" />
+                           </children>
+                        </FlowPane>
+                        <FlowPane alignment="CENTER_LEFT" columnHalignment="CENTER" hgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <children>
+                              <Label style="-fx-font-weight: bold;" text="Difficolta':" />
+                              <Label fx:id="labelDifficulty" text="?" />
+                           </children>
+                        </FlowPane>
+                     </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </GridPane>
                </children>
             </VBox>
          </content>
